IAC: fixed decimal places, flex-wrap nowrap, adding checkboxes that aren't supported yet.

--- a/internet-access-checker-notifier/styles.css
+++ b/internet-access-checker-notifier/styles.css
@@ -12,7 +12,7 @@ main {
 .flexRow {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   justify-content: center;
   margin-bottom: 0.5rem;
 }
